@@ -10,6 +10,8 @@ my @warns; $SIG{__WARN__} = sub {push @warns, @_};
 
 my ( $got, $expected );
 
+my $values_not_match = '/#\s+\d+\/\d+\s+values do not match\n(.|\n)*/';
+
 $expected = 3;
 $got = long( 3,4 );
 test_out( "not ok 1 - ndarrays are equal" );
@@ -68,7 +70,7 @@ $expected = long( 4,5,6,-1,8,9 )->inplace->setvaltobad( -1 );
 $got = long( 4,5,6,7,-1,9 )->inplace->setvaltobad( -1 );
 test_out( "not ok 1 - ndarrays are equal" );
 test_fail( +2 );
-test_err( '/#\s+values do not match\n(.|\n)*/' );
+test_err( $values_not_match );
 is_pdl( $got, $expected );
 test_test( 'catches bad value pattern mismatch' );
 
@@ -76,7 +78,7 @@ $expected = long( 4,5,6,7,8,9 );
 $got = long( 4,5,6,7,-8,9 );
 test_out( "not ok 1 - ndarrays are equal" );
 test_fail( +2 );
-test_err( '/#\s+values do not match\n(.|\n)*/' );
+test_err( $values_not_match );
 is_pdl( $got, $expected );
 test_test( 'catches value mismatches for integer data' );
 
@@ -84,7 +86,7 @@ $expected = pdl( 4,5,6,7,8,9 );
 $got = pdl( 4,5,6,7,-8,9 );
 test_out( "not ok 1 - ndarrays are equal" );
 test_fail( +2 );
-test_err( '/#\s+values do not match\n(.|\n)*/' );
+test_err( $values_not_match );
 is_pdl( $got, $expected );
 test_test( 'catches value mismatches for floating-point data' );
 
@@ -92,7 +94,7 @@ $expected = pdl( 4,5,6,7,8,9 );
 $got = pdl( 4,5,6,7,8.001,9 );
 test_out( "not ok 1 - ndarrays are equal" );
 test_fail( +2 );
-test_err( '/#\s+values do not match\n(.|\n)*/' );
+test_err( $values_not_match );
 is_pdl( $got, $expected );
 test_test( 'approximate comparison for floating-point data fails correctly at documented default tolerance of 1e-6' );
 
@@ -151,7 +153,7 @@ test_test( 'succeeds correctly for long/double' );
 
 test_out( "not ok 1 - ndarrays are equal" );
 test_fail( +2 );
-test_err( '/#\s+values do not match\n(.|\n)*/' );
+test_err( $values_not_match );
 is_pdl( $got, $expected, { atol => 1e-6, require_equal_types => 0 } );
 test_test( 'fails correctly for long/double' );
 
@@ -164,7 +166,7 @@ test_test( 'succeeds correctly for float/short' );
 
 test_out( "not ok 1 - ndarrays are equal" );
 test_fail( +2 );
-test_err( '/#\s+values do not match\n(.|\n)*/' );
+test_err( $values_not_match );
 is_pdl( $got, $expected, { atol => 1e-6, require_equal_types => 0 } );
 test_test( 'fails correctly for float/short' );
 
@@ -177,7 +179,7 @@ test_test( 'succeeds correctly for double/float' );
 
 test_out( "not ok 1 - ndarrays are equal" );
 test_fail( +2 );
-test_err( '/#\s+values do not match\n(.|\n)*/' );
+test_err( $values_not_match );
 is_pdl( $got, $expected, { atol => 1e-6, require_equal_types => 0 } );
 test_test( 'fails correctly for double/float' );
 
