@@ -7,6 +7,7 @@ Revision history for Test::PDL
  - change tolerance behaviour from "diff < tol" to "diff <= tol"
  - negative tolerance now an error
  - tolerances now applied to integers
+ - fails now give a count of how many values didn't match
 
 0.20      2022-02-26
 
